--- a/modules/axalloc/Cargo.toml
+++ b/modules/axalloc/Cargo.toml
@@ -22,3 +22,4 @@ spinlock = { path = "../../crates/spinlock" }
 memory_addr = { path = "../../crates/memory_addr" }
 allocator = { path = "../../crates/allocator", features = ["bitmap"] }
 axerrno = { path = "../../crates/axerrno" }
+hal = { path = "../../crates/hal", features = ["alloc"]}
