--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -11,7 +11,7 @@ documentation = "https://rcore-os.github.io/arceos/axhal/index.html"
 
 [features]
 smp = []
-alloc = []
+alloc = ["hal/alloc"]
 fp_simd = []
 paging = ["axalloc", "page_table"]
 irq = []
@@ -39,7 +39,8 @@ memory_addr = { path = "../../crates/memory_addr" }
 handler_table = { path = "../../crates/handler_table" }
 crate_interface = { path = "../../crates/crate_interface" }
 axfs_ramfs = { path = "../../crates/axfs_ramfs", optional = true }
-riscv = "0.10"
+hal = { path = "../../crates/hal", features = ["stackful"] }
+
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86 = "0.52"
 x86_64 = "0.14"
